2008-03-01 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_netrpc.h: added missing space indicator in a
	  few user space calls for mail boxes.

2008-02-29 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/ipc/shm/shm.c: fixed wrong arg passing to rt_shm_alloc_usp 
	  when called from ioct support. 
	  Bug pointed out by: Calin A. Culianu <calin@ajvar.org>. 

2008-02-12 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/ipc/shm/kvmem.c and base/malloc/malloc.c: fix problem with
	  RAM > 1 GM (Linux HIGHMEM).

2008-01-28 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: allow use of SCHED_OTHER, lost since 3.2,
	  but only by setting it explicitely with rt_task_init_schmod.

2008-01-24  Roberto Bucher <roberto.bucher@supsi.ch>

	* configure.in: Modified for Scilab-4.1.2: rtai-lab/devices is no more in the
	compilation tree.
	* configure:  Modified for Scilab-4.1.2: rtai-lab/devices is no more in the
	compilation tree.

2008-01-23  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/*: All the files modified for Scilab-4.1.2.

2008-01-17 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 3.6

2008-01-11 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86_64/rtai_lxrt.h: force a "clts" before 
	  context_switch if the prev task used the FPU.

2008-01-10 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86_64/rtai_fpu.h: simplified because xmm is always 
	  there and copied fpu save/restore from Linux.

2008-01-10  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/matlab/rtai.tmf: Modified for Matlab 7.3 and Matlab-7.4.

2008-01-06 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/ppc/Kconfig: update the RTDM related part.
	* base/include/rtai_shm.h: add macro UVIRT_TO_KVA to shorten usage of
	  the real uvirt_to_kva.
	* addons/rtdm/xn.h: use UVIRT_TO_KVA to define a missing macro needed 
	  for older Linux versions.
