@@ -31,7 +31,7 @@ README.LXRT_EXTS_IN_USE \
 README.SMI \
 @RTAI_MAYBE_SIMDIR@
 
-DISTCLEANFILES = .rtai_config .rtai_config.old .cfok .cfchanged
+DISTCLEANFILES = .rtai_config .rtai_config.old .cfok .cfchanged Module.symvers
 
 all-recursive install-recursive: base/GNUmakefile clean-if-reconfigured
 
@@ -77,6 +77,9 @@ endif
 install-data-local: .rtai_config
 	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)
 	$(INSTALL_DATA) .rtai_config $(DESTDIR)$(pkgdatadir)/config-rtai-$(VERSION)
+	if -f Module.symvers ; then \
+	    $(INSTALL_DATA) $(DESTDIR)$(includedir)/Module.symvers \
+	fi
 
 install-exec-local: devices
 
