@@ -616,6 +616,7 @@ uninstall-am: uninstall-info-am uninstall-local
 
 @CONFIG_KBUILD_TRUE@clean-local:
 @CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CLEAN@
+@CONFIG_KBUILD_TRUE@	rm -f FORCE
 
 @CONFIG_KBUILD_TRUE@distclean-local:
 @CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_DISTCLEAN@
