@@ -57,6 +57,13 @@ calibration_helper_LDADD = \
 	../../../sched/liblxrt/liblxrt.la \
 	-lpthread
 
+calibrate_DEPENDENCIES = liblxrt.la
+liblxrt.la:
+	@(cd ../../../sched/liblxrt && make liblxrt.la)
+
+.PHONY: liblxrt.la
+
+
 all-local: calibrate_rt$(modext)
 
 install-exec-local: calibrate_rt$(modext)
